--- a/.classpath
+++ b/.classpath
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/home/varsha/Desktop/json-simple-1.1.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/amritanischal/Downloads/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/amritanischal/Downloads/gson-2.8.5.jar"/>
+	<classpathentry kind="lib" path="/Users/amritanischal/Downloads/jackson-databind-2.5.3.jar"/>
+	<classpathentry kind="lib" path="/Users/amritanischal/Downloads/jackson-core-2.5.3.jar"/>
+	<classpathentry kind="lib" path="/Users/amritanischal/Downloads/jackson-annotations-2.5.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
